Trying to fix contrast error by removing styles from nav

--- a/style.css
+++ b/style.css
@@ -22,18 +22,13 @@ h1, h2 {
 
 nav {
   margin-bottom: 20px;
-  background: #5180ED;
   padding: 10px;
   border-radius: 6px;
 }
 nav a {
-  color: #fff;
   text-decoration: none;
   margin-right: 10px;
   font-weight: bold;
-}
-nav a:hover {
-  color: #fff;
 }
 
 ul, ol, dl {
